fixed double border

--- a/admin/adminstyle.css
+++ b/admin/adminstyle.css
@@ -14,7 +14,7 @@
 input[type="password"],
 input[type="email"] {
   font-size: 20px;
-  width: 82%;
+  width: 100%;
   padding: 10px;
   border: none;
 }
